Changes to automatically generate publications

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#todo: incorporate different collection types rather than a catch all publications, requires other changes to template\n",
     "publist = {\n",
+    "    \"journal\":{\n",
+    "        \"file\": \"pubs.bib\",\n",
+    "        \"venuekey\" : \"journal\",\n",
+    "        \"venue-pretext\" : \"\",\n",
+    "        \"collection\" : {\"name\":\"publications\",\n",
+    "                        \"permalink\":\"/publication/\"}\n",
+    "    }, \n",
     "    \"proceeding\": {\n",
     "        \"file\" : \"proceedings.bib\",\n",
     "        \"venuekey\": \"booktitle\",\n",
@@ -50,19 +57,13 @@
     "                        \"permalink\":\"/publication/\"}\n",
     "        \n",
     "    },\n",
-    "    \"journal\":{\n",
-    "        \"file\": \"pubs.bib\",\n",
-    "        \"venuekey\" : \"journal\",\n",
-    "        \"venue-pretext\" : \"\",\n",
-    "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
-    "    } \n",
+    "\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +80,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "journal\n",
+      "SUCESSFULLY PARSED J-xenos2023integrated: \" Integrated Data Analysis Uncovers New COVID-19 Related Genes ... \"\n",
+      "SUCESSFULLY PARSED J-zambrana2021network: \" Network neighbors of viral targets and differentially expres ... \"\n",
+      "SUCESSFULLY PARSED J-zambrana2018monitoring: \" Monitoring of upper-limb movements through inertial sensors  ... \"\n",
+      "SUCESSFULLY PARSED J-zambrana2016sleeping: \" Sleeping recognition to assist elderly people at home  \"\n",
+      "proceeding\n",
+      "SUCESSFULLY PARSED CP-vargiu2020improving: \" Improving sleeping habits: preliminary experiments in Barcel ... \"\n",
+      "SUCESSFULLY PARSED CP-butt2019assessment: \" Assessment of Purposeful Movements for Post-Stroke Patients  ... \"\n",
+      "SUCESSFULLY PARSED CP-zambrana2017hierarchical: \" A Hierarchical Approach to Recognize Purposeful Movements Us ... \"\n",
+      "SUCESSFULLY PARSED CP-rafael2016third: \" Third Generation Teleassistance: Intelligent Monitoring Make ... \"\n"
+     ]
+    }
+   ],
    "source": [
     "for pubsource in publist:\n",
+    "    print(pubsource)\n",
     "    parser = bibtex.Parser()\n",
     "    bibdata = parser.parse_file(publist[pubsource][\"file\"])\n",
     "\n",
@@ -128,7 +147,9 @@
     "\n",
     "            #Build Citation from text\n",
     "            citation = \"\"\n",
-    "\n",
+    "            \n",
+    "  \n",
+    "            \n",
     "            #citation authors - todo - add highlighting for primary author?\n",
     "            for author in bibdata.entries[bib_id].persons[\"author\"]:\n",
     "                citation = citation+\" \"+author.first_names[0]+\" \"+author.last_names[0]+\", \"\n",
@@ -140,7 +161,7 @@
     "            venue = publist[pubsource][\"venue-pretext\"]+b[publist[pubsource][\"venuekey\"]].replace(\"{\", \"\").replace(\"}\",\"\").replace(\"\\\\\",\"\")\n",
     "\n",
     "            citation = citation + \" \" + html_escape(venue)\n",
-    "            citation = citation + \", \" + pub_year + \".\"\n",
+    "            citation = citation + \", \" + pub_date + \".\"\n",
     "\n",
     "            \n",
     "            ## YAML variables\n",
@@ -156,7 +177,7 @@
     "                    md += \"\\nexcerpt: '\" + html_escape(b[\"note\"]) + \"'\"\n",
     "                    note = True\n",
     "\n",
-    "            md += \"\\ndate: \" + str(pub_date) \n",
+    "            md += \"\\ndate: \" + str(pub_year) \n",
     "\n",
     "            md += \"\\nvenue: '\" + html_escape(venue) + \"'\"\n",
     "            \n",
@@ -182,7 +203,7 @@
     "\n",
     "            md_filename = os.path.basename(md_filename)\n",
     "\n",
-    "            with open(\"../_publications/\" + md_filename, 'w') as f:\n",
+    "            with open(\"../_\" + pubsource + \"/\" + md_filename, 'w') as f:\n",
     "                f.write(md)\n",
     "            print(f'SUCESSFULLY PARSED {bib_id}: \\\"', b[\"title\"][:60],\"...\"*(len(b['title'])>60),\"\\\"\")\n",
     "        # field may not exist for a reference\n",
@@ -215,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
