Change Journal and proceddings

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
@@ -161,7 +161,7 @@
     "            venue = publist[pubsource][\"venue-pretext\"]+b[publist[pubsource][\"venuekey\"]].replace(\"{\", \"\").replace(\"}\",\"\").replace(\"\\\\\",\"\")\n",
     "\n",
     "            citation = citation + \" \" + html_escape(venue)\n",
-    "            citation = citation + \", \" + pub_date + \".\"\n",
+    "            citation = citation + \", \" + pub_year + \".\"\n",
     "\n",
     "            \n",
     "            ## YAML variables\n",
@@ -177,7 +177,7 @@
     "                    md += \"\\nexcerpt: '\" + html_escape(b[\"note\"]) + \"'\"\n",
     "                    note = True\n",
     "\n",
-    "            md += \"\\ndate: \" + str(pub_year) \n",
+    "            md += \"\\ndate: \" + str(pub_date) \n",
     "\n",
     "            md += \"\\nvenue: '\" + html_escape(venue) + \"'\"\n",
     "            \n",
