--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -46,15 +46,15 @@
     "        \"file\": \"pubs.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
-    "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
+    "        \"collection\" : {\"name\":\"journal\",\n",
+    "                        \"permalink\":\"/journal/\"}\n",
     "    }, \n",
     "    \"proceeding\": {\n",
     "        \"file\" : \"proceedings.bib\",\n",
     "        \"venuekey\": \"booktitle\",\n",
     "        \"venue-pretext\": \"In the proceedings of \",\n",
-    "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
+    "        \"collection\" : {\"name\":\"proceeding\",\n",
+    "                        \"permalink\":\"/proceeding/\"}\n",
     "        \n",
     "    },\n",
     "\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "scrolled": false
    },
