Put type of publications in markdowns

--- a/markdown_generator/proceedings.bib
+++ b/markdown_generator/proceedings.bib
@@ -1,6 +1,6 @@
 @inproceedings{CP-vargiu2020improving,
   title={Improving sleeping habits: preliminary experiments in Barcelona and Lleida},
-  author={Vargiu, Eloisa and Zambrana, Carme and Targa, Adriano and Barb{\'e} Illa, Ferran},
+  author={Vargiu, Eloisa and Zambrana, Carme and Targa, Adriano and Barbé-Illa, Ferran},
   booktitle={Proceedings of the Fifth Italian Workshop on Artificial Intelligence for Ambient Assisted Living, 2019, vol. 2559, p. 51-56},
   year={2019},
   month = {Nov},
