--- a/markdown_generator/pubs.bib
+++ b/markdown_generator/pubs.bib
@@ -16,7 +16,7 @@
 
 @article{J-zambrana2021network,
   abstract = {The COVID-19 pandemic is raging. It revealed the importance of rapid scientific advancement towards understanding and treating new diseases. To address this challenge, we adapt an explainable artificial intelligence algorithm for data fusion and utilize it on new omics data on viral–host interactions, human protein interactions, and drugs to better understand SARS-CoV-2 infection mechanisms and predict new drug–target interactions for COVID-19. We discover that in the human interactome, the human proteins targeted by SARS-CoV-2 proteins and the genes that are differentially expressed after the infection have common neighbors central in the interactome that may be key to the disease mechanisms. We uncover 185 new drug–target interactions targeting 49 of these key genes and suggest re-purposing of 149 FDA-approved drugs, including drugs targeting VEGF and nitric oxide signaling, whose pathways coincide with the observed COVID-19 symptoms. Our integrative methodology is universal and can enable insight into this and other serious diseases.},
-  author = {Zambrana, Carme and Xenos, Alexandros and B{\"{o}}ttcher, Ren{\'{e}} and Malod-Dognin, No{\"{e}}l and Pr{\v{z}}ulj, Nata{\v{s}}a},
+  author = {Zambrana, Carme and Xenos, Alexandros and Böttcher, René and Malod-Dognin, Noël and Pržulj, Nataša},
   doi = {10.1038/s41598-021-98289-x},
   issn = {2045-2322},
   journal = {Scientific Reports},
